GNOME Bugzilla – Bug 792486
typefindhelper: fix confusing log in helper_find_peek
Last modified: 2018-01-15 16:37:11 UTC
at then end of file, requested buffer size may not be fulfilled. In case of shorten buffer size, the log is quite confusing. >default gsttypefindhelper.c:177:helper_find_peek:[00m dropping short buffer: 18446744073709551615-429 instead of 18162-22257
Created attachment 366756 [details] [review] Distinguish two types of buffer for clear log
Thanks for the patch. I have pushed it with a few changes (moved the size check up so it's closer to the comment; changed the debug messages and simplified the wrong offset debug message). commit 33e7269c37986f6df40db0e5090e77d57a2da218 (HEAD -> master) Author: Jun Xie <jun.xie@samsung.com> Date: Sat Jan 13 11:08:00 2018 +0800 typefindhelper: fix confusing debug log message In case of a short buffer, the debug log is quite confusing. Distinguish the two types of failure cases to make it clearer. https://bugzilla.gnome.org/show_bug.cgi?id=792486